src/objects/Loan_Data__c.object
<CustomObject>
    <fields>
        <fullName>Capital_Pushed_Back__c</fullName>
        <label>Capital Pushed Back</label>
        <summarizedField>Loan_Traunch__c.Capital_Pushback__c</summarizedField>
        <summaryFilterItems>
            <field>Loan_Traunch__c.Push_back_Transacted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Loan_Traunch__c.Loan_Data__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Capital_Tranched__c</fullName>
        <label>Capital Tranched</label>
        <summarizedField>Loan_Traunch__c.Tranche_Cap__c</summarizedField>
        <summaryFilterItems>
            <field>Loan_Traunch__c.Tranche_Type__c</field>
            <operation>notEqual</operation>
            <value>MSLP - Holding Tranche, BlueWave - Holding Tranche</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Loan_Traunch__c.Stage__c</field>
            <operation>notEqual</operation>
            <value>Capital not requested</value>
        </summaryFilterItems>
        <summaryForeignKey>Loan_Traunch__c.Loan_Data__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Investor__c</fullName>
        <label>Investor</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pool_Type__c</fullName>
        <label>Pool Type</label>
        <picklist>
            <picklistValues>
                <fullName>Revolving Credit Line</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Principal_Reserved__c</fullName>
        <label>Principal Reserved</label>
        <summarizedField>Loan_Traunch__c.Principal_Reserved__c</summarizedField>
        <summaryForeignKey>Loan_Traunch__c.Loan_Data__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Capital__c</fullName>
        <label>Total Capital</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tranche_Count__c</fullName>
        <label>Tranche Count</label>
        <summaryFilterItems>
            <field>Loan_Traunch__c.Tranche_Type__c</field>
            <operation>notEqual</operation>
            <value>MSLP - Holding Tranche, BlueWave - Holding Tranche</value>
        </summaryFilterItems>
        <summaryForeignKey>Loan_Traunch__c.Loan_Data__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>capital_reserved_for_advancement__c</fullName>
        <label>Capital Reserved for Advancement</label>
        <summarizedField>Loan_Traunch__c.capital_reserved_for_advancement__c</summarizedField>
        <summaryForeignKey>Loan_Traunch__c.Loan_Data__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Capital Pool</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Capital Pools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>